Lots of punctuation. Transpositions in 435-441.

--- a/index.html
+++ b/index.html
@@ -3096,11 +3096,11 @@
 </p>
 <p data-ln="392">
 	<span id="392#ciēre" data-intext="ciēre" data-perslemma="cieo" data-lemma="cieō –ēre –cīvī –citus" data-pos="v--pna---" data-shortdef="to cause">ciēre</span>
-	<span id="392#nōmen" data-intext="nōmen" data-perslemma="nomen" data-lemma="nōmen nōminis n." data-pos="n-s---na-" data-shortdef="name">nōmen</span>.
+	<span id="392#nōmen" data-intext="nōmen" data-perslemma="nomen" data-lemma="nōmen nōminis n." data-pos="n-s---na-" data-shortdef="name">nōmen</span>;
 	<span id="392#alia" data-intext="alia" data-perslemma="alius2" data-lemma="alius alia aliud" data-pos="n-s---fn-" data-shortdef="other, another">alia</span>
 	<span id="392#temptanda" data-intext="temptanda" data-perslemma="tempto" data-lemma="temptō temptāre temptāvī temptātus" data-pos="v-s-g-fn-" data-shortdef="to try">temptanda</span>
 	<span id="392#est" data-intext="est" data-perslemma="sum" data-lemma="sum esse fuī futūrus" data-pos="v3spia---" data-shortdef="to be">est</span>
-	<span id="392#via" data-intext="via" data-perslemma="via" data-lemma="via viae f." data-pos="n-s---fn-" data-shortdef="street">via</span>:
+	<span id="392#via" data-intext="via" data-perslemma="via" data-lemma="via viae f." data-pos="n-s---fn-" data-shortdef="street">via</span>.
 </p>
 <p data-ln="393">
 	<span id="393#ipse" data-intext="ipse" data-perslemma="ipse" data-lemma="ipse ipsa ipsum" data-pos="p-s---mn-" data-shortdef="himself, herself, itself (intensive)">ipse</span>
@@ -3115,7 +3115,7 @@
 	<span id="394#ut" data-intext="ut" data-perslemma="ut" data-lemma="ut or utī" data-pos="c--------" data-shortdef="so that; as, when; that; how? In what manner?">ut</span>
 	<span id="394#caedis" data-intext="caedis" data-perslemma="caedes" data-lemma="caedēs caedis f." data-pos="n-s---fg-" data-shortdef="killing">caedis</span>
 	<span id="394#auctōrem" data-intext="auctōrem" data-perslemma="auctor" data-lemma="auctor auctōris m." data-pos="n-s---ma-" data-shortdef="founder">auctōrem</span>
-	<span id="394#indicet" data-intext="indicet" data-perslemma="indico1" data-lemma="indicō indicāre indicāvī indicātus" data-pos="v3spsa---" data-shortdef="to point out, accuse">indicet</span>.
+	<span id="394#indicet" data-intext="indicet" data-perslemma="indico1" data-lemma="indicō indicāre indicāvī indicātus" data-pos="v3spsa---" data-shortdef="to point out, accuse">indicet</span>;
 </p>
 <p data-ln="395">
 	<span id="395#reseranda" data-intext="reseranda" data-perslemma="resero2" data-lemma="reserō reserāre reserāvī reserātus" data-pos="v-s-g-fn-" data-shortdef="to unbolt; open">reseranda</span>
@@ -3136,7 +3136,7 @@
 	<span id="397#ēde" data-intext="ēde" data-perslemma="edo2" data-lemma="ēdō ēdere ēdidī ēditus" data-pos="v2spma---" data-shortdef="to emit, bring forth">ēde</span>
 	<span id="397#cui" data-intext="cui" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-s---md-" data-shortdef="who, which">cui</span>
 	<span id="397#mandēs" data-intext="mandēs" data-perslemma="mando1" data-lemma="mandō mandāre mandāvī mandātus" data-pos="v2spsa---" data-shortdef="to entrust">mandēs</span>
-	<span id="397#sacrum" data-intext="sacrum" data-perslemma="sacrum" data-lemma="sacrum sacrī n." data-pos="n-s---na-" data-shortdef="a holy thing, (religious) rite">sacrum</span>;
+	<span id="397#sacrum" data-intext="sacrum" data-perslemma="sacrum" data-lemma="sacrum sacrī n." data-pos="n-s---na-" data-shortdef="a holy thing, (religious) rite">sacrum</span>,
 </p>
 <p data-ln="398">
 	<span id="398#nam" data-intext="nam" data-perslemma="nam" data-lemma="nam" data-pos="c--------" data-shortdef="for">nam</span>
@@ -3210,7 +3210,7 @@
 	<span id="404#decus" data-intext="decus" data-perslemma="decus1" data-lemma="decus decoris n." data-pos="n-s---nv-" data-shortdef="beauty; ornament; glory">decus</span>,
 	<span id="404#hūc" data-intext="hūc" data-perslemma="huc" data-lemma="hūc" data-pos="d--------" data-shortdef="to here, hither">hūc</span>
 	<span id="404#ades" data-intext="ades" data-perslemma="adsum" data-lemma="adsum adesse adfuī adfutūrus" data-pos="v2spma---" data-shortdef="to be at, be present, be at hand">ades</span>
-	<span id="404#vōtīs" data-intext="vōtīs" data-perslemma="votum" data-lemma="vōtum vōtī n." data-pos="n-p---nd-" data-shortdef="vow">vōtīs</span>,
+	<span id="404#vōtīs" data-intext="vōtīs" data-perslemma="votum" data-lemma="vōtum vōtī n." data-pos="n-p---nd-" data-shortdef="vow">vōtīs</span>
 </p>
 <p data-ln="406">
 	<span id="406#quae" data-intext="quae" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-p---na-" data-shortdef="who, which">quae</span>
@@ -3283,7 +3283,7 @@
 	<span id="417#rūrsus" data-intext="rūrsus" data-perslemma="rursus" data-lemma="rūrsus or rūrsum" data-pos="d--------" data-shortdef="back">rūrsus</span>
 	<span id="417#adductō" data-intext="adductō" data-perslemma="adduco" data-lemma="addūcō adducere addūxī adductus" data-pos="v-srppmb-" data-shortdef="to lead to, induce">adductō</span>
 	<span id="417#revocāre" data-intext="revocāre" data-perslemma="revoco" data-lemma="revocō revocāre revocāvī revocātus" data-pos="v--pna---" data-shortdef="to call back">revocāre</span>
-	<span id="417#nōdō" data-intext="nōdō" data-perslemma="nodus" data-lemma="nōdus –ī m." data-pos="n-s---mb-" data-shortdef="knot">nōdō</span>:
+	<span id="417#nōdō" data-intext="nōdō" data-perslemma="nodus" data-lemma="nōdus –ī m." data-pos="n-s---mb-" data-shortdef="knot">nōdō</span>,
 </p>
 <p data-ln="418">
 	<span id="418#quālis" data-intext="quālis" data-perslemma="qualis" data-lemma="quālis quāle" data-pos="a-s---mn-" data-shortdef="what sort">quālis</span>
@@ -3368,14 +3368,14 @@
 	<span id="430#pampineīs" data-intext="pampineīs" data-perslemma="pampineus" data-lemma="pampineus –a –um" data-pos="a-p---nb-" data-shortdef="covered in vines">pampineīs</span>
 	<span id="430#redimītus" data-intext="redimītus" data-perslemma="redimio" data-lemma="redimiō –īre –iī –ītus" data-pos="v-prppmn-" data-shortdef="to bind round, encircle, crown">redimītus</span>
 	<span id="430#tempora" data-intext="tempora" data-perslemma="tempus" data-lemma="tempus temporis n." data-pos="n-p---nn-" data-shortdef="time">tempora</span>
-	<span id="430#sertīs" data-intext="sertīs" data-perslemma="serta" data-lemma="serta –ōrum n." data-pos="n-p---nb-" data-shortdef="things entwined; garlands">sertīs</span>;
+	<span id="430#sertīs" data-intext="sertīs" data-perslemma="serta" data-lemma="serta –ōrum n." data-pos="n-p---nb-" data-shortdef="things entwined; garlands">sertīs</span>.
 </p>
 <p data-ln="431">
 	<span id="431#condita" data-intext="condita" data-perslemma="condo" data-lemma="condō condere condidī conditus" data-pos="v-prppna-" data-shortdef="to build, store up, place">condita</span>
 	<span id="431#lascīvī" data-intext="lascīvī" data-perslemma="lascivus" data-lemma="lascīvus –a –um" data-pos="a-p---mn-" data-shortdef="playful, wanton">lascīvī</span>
 	<span id="431#dēdūcunt" data-intext="dēdūcunt" data-perslemma="deduco" data-lemma="dēdūcō dēdūcere dēdūxī dēductus" data-pos="v3ppia---" data-shortdef="to launch, lead away">dēdūcunt</span>
 	<span id="431#orgia" data-intext="orgia" data-perslemma="orgia" data-lemma="orgia –ōrum n." data-pos="n-p---na-" data-shortdef="the rites of Bacchus">orgia</span>
-	<span id="431#mystae" data-intext="mystae" data-perslemma="mysta" data-lemma="mysta (mystēs) –ae m." data-pos="n-p---mn-" data-shortdef="a priest of the mysteries">mystae</span>.
+	<span id="431#mystae" data-intext="mystae" data-perslemma="mysta" data-lemma="mysta (mystēs) –ae m." data-pos="n-p---mn-" data-shortdef="a priest of the mysteries">mystae</span>:
 </p>
 <p data-ln="432">
 	<span id="432#tē" data-intext="tē" data-perslemma="tu" data-lemma="tū tuī tibi tē tē" data-pos="p-s---ma-" data-shortdef="you">tē</span>
@@ -3395,23 +3395,11 @@
 	<span id="434#nunc" data-intext="nunc" data-perslemma="nunc" data-lemma="nunc" data-pos="d--------" data-shortdef="now">nunc</span>
 	<span id="434#Thrēiciō" data-intext="Thrēiciō" data-perslemma="Threicius" data-lemma="Thrēicius –a –um" data-pos="a-s---mb-" data-shortdef="Thracian; northern">Thrēiciō</span>
 </p>
-<p data-ln="435a">
-	<span id="435a#vertice" data-intext="vertice" data-perslemma="vertex" data-lemma="vertex verticis m." data-pos="n-s---mb-" data-shortdef="whirlpool; peak, summit">vertice</span>
-	<span id="435a#Pindī" data-intext="Pindī" data-perslemma="Pindus" data-lemma="Pindus (Pindos) –ī m." data-pos="n-s---mg-" data-shortdef="Pindus, a lofty mountain in Thessaly">Pindī</span>.
-</p>
-<p data-ln="439">
-	<span id="439#tibi" data-intext="tibi" data-perslemma="tu" data-lemma="tū tuī tibi tē tē" data-pos="p-s---md-" data-shortdef="you">tibi</span>
-	<span id="439#commōtae" data-intext="commōtae" data-perslemma="commoveo" data-lemma="commoveō commovēre commōvī commōtus" data-pos="v-prppfn-" data-shortdef="to shake, be moved">commōtae</span>
-	<span id="439#pectora" data-intext="pectora" data-perslemma="pectus" data-lemma="pectus pectoris n." data-pos="n-p---na-" data-shortdef="chest, breast; heart">pectora</span>
-	<span id="439#mātrēs" data-intext="mātrēs" data-perslemma="mater" data-lemma="māter mātris f." data-pos="n-p---fn-" data-shortdef="mother">mātrēs</span>
-</p>
-<p data-ln="440a">
-	<span id="440a#fūdēre" data-intext="fūdēre" data-perslemma="fundo1" data-lemma="fundō fundāre fundāvī fundātus" data-pos="v3pria---" data-shortdef="to found">fūdēre</span>
-	<span id="440a#comam" data-intext="comam" data-perslemma="coma" data-lemma="coma comae f." data-pos="n-s---fa-" data-shortdef="hair">comam</span>.
-</p>
-<p data-ln="435b">
-	<span id="435b#nunc" data-intext="nunc" data-perslemma="nunc" data-lemma="nunc" data-pos="d--------" data-shortdef="now">nunc</span>
-	<span id="435b#Cadmēās" data-intext="Cadmēās" data-perslemma="Cadmeus" data-lemma="Cadmēius (Cadmēus) –a –um" data-pos="a-p---fa-" data-shortdef="Cadmean">Cadmēās</span>
+<p data-ln="435">
+	<span id="435#vertice" data-intext="vertice" data-perslemma="vertex" data-lemma="vertex verticis m." data-pos="n-s---mb-" data-shortdef="whirlpool; peak, summit">vertice</span>
+	<span id="435#Pindī" data-intext="Pindī" data-perslemma="Pindus" data-lemma="Pindus (Pindos) –ī m." data-pos="n-s---mg-" data-shortdef="Pindus, a lofty mountain in Thessaly">Pindī</span>.
+	<span id="435#nunc" data-intext="nunc" data-perslemma="nunc" data-lemma="nunc" data-pos="d--------" data-shortdef="now">nunc</span>
+	<span id="435#Cadmēās" data-intext="Cadmēās" data-perslemma="Cadmeus" data-lemma="Cadmēius (Cadmēus) –a –um" data-pos="a-p---fa-" data-shortdef="Cadmean">Cadmēās</span>
 </p>
 <p data-ln="436">
 	<span id="436#inter" data-intext="inter" data-perslemma="inter" data-lemma="inter" data-pos="r--------" data-shortdef="between, among; during">inter</span>
@@ -3422,7 +3410,7 @@
 <p data-ln="437">
 	<span id="437#comes" data-intext="comes" data-perslemma="comes" data-lemma="comes comitis m./f." data-pos="n-s---fn-" data-shortdef="companion">comes</span>
 	<span id="437#Ōgygiō" data-intext="Ōgygiō" data-perslemma="Ogygius" data-lemma="Ōgygius –a –um" data-pos="a-s---md-" data-shortdef="of Ogygius, founder of Thebes; Theban">Ōgygiō</span>
-	<span id="437#venit" data-intext="venit" data-perslemma="venio" data-lemma="veniō venīre vēnī ventum" data-pos="v3spia---" data-shortdef="to come">venit</span>
+	<span id="437#vēnit" data-intext="vēnit" data-perslemma="venio" data-lemma="veniō venīre vēnī ventum" data-pos="v3sria---" data-shortdef="to come">vēnit</span>
 	<span id="437#Iacchō" data-intext="Iacchō" data-perslemma="Iacchus" data-lemma="Iacchus –ī m." data-pos="n-s---md-" data-shortdef="Bacchus; an appellation of Bacchus">Iacchō</span>,
 </p>
 <p data-ln="438">
@@ -3435,15 +3423,27 @@
 	<span id="440b#thyrsumque" data-intext="thyrsumque" data-perslemma="thyrsus" data-lemma="thyrsus –ī m." data-pos="n-s---ma-" data-shortdef="the stalk of a plant; a staff wreathed with ivy and vine-leaves">thyrsumque</span>
 	<span id="440b#levem" data-intext="levem" data-perslemma="levis" data-lemma="levis –e" data-pos="a-s---ma-" data-shortdef="light, delicate, small">levem</span>
 </p>
-<p data-ln="441">
-	<span id="441#vibrante" data-intext="vibrante" data-perslemma="vibro" data-lemma="vibrō vibrāre vibrāvī vibrātus" data-pos="v-sppafb-" data-shortdef="to shake">vibrante</span>
-	<span id="441#manū" data-intext="manū" data-perslemma="manus1" data-lemma="manus manūs f." data-pos="n-s---fb-" data-shortdef="hand; band of men">manū</span>.
-	<span id="441#iam" data-intext="iam" data-perslemma="jam" data-lemma="iam" data-pos="d--------" data-shortdef="now; already">iam</span>
-	<span id="441#post" data-intext="post" data-perslemma="post" data-lemma="post" data-pos="r--------" data-shortdef="after (adv. and prep. +acc.)">post</span>
-	<span id="441#lacerōs" data-intext="lacerōs" data-perslemma="lacer" data-lemma="lacer –era –erum" data-pos="a-p---ma-" data-shortdef="torn, mangled">lacerōs</span>
+<p data-ln="441a">
+	<span id="441a#vibrante" data-intext="vibrante" data-perslemma="vibro" data-lemma="vibrō vibrāre vibrāvī vibrātus" data-pos="v-sppafb-" data-shortdef="to shake">vibrante</span>
+	<span id="441a#manū" data-intext="manū" data-perslemma="manus1" data-lemma="manus manūs f." data-pos="n-s---fb-" data-shortdef="hand; band of men">manū</span>;
+</p>
+<p data-ln="439">
+	<span id="439#tibi" data-intext="tibi" data-perslemma="tu" data-lemma="tū tuī tibi tē tē" data-pos="p-s---md-" data-shortdef="you">tibi</span>
+	<span id="439#commōtae" data-intext="commōtae" data-perslemma="commoveo" data-lemma="commoveō commovēre commōvī commōtus" data-pos="v-prppfn-" data-shortdef="to shake, be moved">commōtae</span>
+	<span id="439#pectora" data-intext="pectora" data-perslemma="pectus" data-lemma="pectus pectoris n." data-pos="n-p---na-" data-shortdef="chest, breast; heart">pectora</span>
+	<span id="439#mātrēs" data-intext="mātrēs" data-perslemma="mater" data-lemma="māter mātris f." data-pos="n-p---fn-" data-shortdef="mother">mātrēs</span>
+</p>
+<p data-ln="440a">
+	<span id="440a#fūdēre" data-intext="fūdēre" data-perslemma="fundo1" data-lemma="fundō fundāre fundāvī fundātus" data-pos="v3pria---" data-shortdef="to found">fūdēre</span>
+	<span id="440a#comam" data-intext="comam" data-perslemma="coma" data-lemma="coma comae f." data-pos="n-s---fa-" data-shortdef="hair">comam</span>.
+</p>
+<p data-ln="441b">
+	<span id="441b#iam" data-intext="iam" data-perslemma="jam" data-lemma="iam" data-pos="d--------" data-shortdef="now; already">iam</span>
+	<span id="441b#post" data-intext="post" data-perslemma="post" data-lemma="post" data-pos="r--------" data-shortdef="after (adv. and prep. +acc.)">post</span>
+	<span id="441b#lacerōs" data-intext="lacerōs" data-perslemma="lacer" data-lemma="lacer –era –erum" data-pos="a-p---ma-" data-shortdef="torn, mangled">lacerōs</span>
 </p>
 <p data-ln="442">
-	<span id="442#Penthēōs" data-intext="Penthēōs" data-perslemma="Pentheus" data-lemma="Penthēus –a –um" data-pos="a-p---ma-" data-shortdef="of Pentheus">Penthēōs</span>
+	<span id="442#Pentheos" data-intext="Pentheos" data-perslemma="Pentheus" data-lemma="Pentheus –eī/–eos m." data-pos="n-s---mg-" data-shortdef="Pentheus">Pentheos</span>
 	<span id="442#artūs" data-intext="artūs" data-perslemma="artus2" data-lemma="artus –ūs m." data-pos="n-p---ma-" data-shortdef="a joint, the limbs">artūs</span>
 	<span id="442#Thȳades" data-intext="Thȳades" data-perslemma="Thyas" data-lemma="Thȳas –adis f." data-pos="n-p---fn-" data-shortdef="a Bacchant or Maenad">Thȳades</span>
 	<span id="442#oestrō" data-intext="oestrō" data-perslemma="oestrus" data-lemma="oestrus –ī m." data-pos="n-s---mb-" data-shortdef="a fly">oestrō</span>
@@ -3464,14 +3464,14 @@
 	<span id="445#tenet" data-intext="tenet" data-perslemma="teneo" data-lemma="teneō tenēre tenuī tentus" data-pos="v3spia---" data-shortdef="to hold">tenet</span>
 	<span id="445#nitidī" data-intext="nitidī" data-perslemma="nitidus" data-lemma="nitidus –a –um" data-pos="a-s---mg-" data-shortdef="shining, bring">nitidī</span>
 	<span id="445#mātertera" data-intext="mātertera" data-perslemma="matertera" data-lemma="mātertera –ae f." data-pos="n-s---fn-" data-shortdef="a mother’s sister, an aunt ">mātertera</span>
-	<span id="445#Bacchī" data-intext="Bacchī" data-perslemma="Bacchus" data-lemma="Bacchus –ī m." data-pos="n-s---mg-" data-shortdef="Bacchus">Bacchī</span>,
+	<span id="445#Bacchī" data-intext="Bacchī" data-perslemma="Bacchus" data-lemma="Bacchus –ī m." data-pos="n-s---mg-" data-shortdef="Bacchus">Bacchī</span>
 </p>
 <p data-ln="446">
 	<span id="446#Nēreidumque" data-intext="Nēreidumque" data-perslemma="Nereis" data-lemma="Nērēīs –idis (–idos) f." data-pos="n-p---fg-" data-shortdef="Nereis">Nēreidumque</span>
 	<span id="446#chorīs" data-intext="chorīs" data-perslemma="chorus" data-lemma="chorus –ī m." data-pos="n-p---mb-" data-shortdef="dance in circle; dance; company of singers or dancers">chorīs</span>
 	<span id="446#Cadmēia" data-intext="Cadmēia" data-perslemma="Cadmeius" data-lemma="Cadmēius (Cadmēus) –a –um" data-pos="a-s---fn-" data-shortdef="Cadmean">Cadmēia</span>
 	<span id="446#cingitur" data-intext="cingitur" data-perslemma="cingo" data-lemma="cingō cingere cīnxī cīnctus" data-pos="v3spip---" data-shortdef="to surround">cingitur</span>
-	<span id="446#Īnō" data-intext="Īnō" data-perslemma="Ino" data-lemma="Īnō Īnūs f. or Īnō Īnōnis f." data-pos="n-s---fn-" data-shortdef="Ino (a name)">Īnō</span>;
+	<span id="446#Īnō" data-intext="Īnō" data-perslemma="Ino" data-lemma="Īnō Īnūs f. or Īnō Īnōnis f." data-pos="n-s---fn-" data-shortdef="Ino (a name)">Īnō</span>.
 </p>
 <p data-ln="447">
 	<span id="447#iūs" data-intext="iūs" data-perslemma="jus" data-lemma="iūs iūris n." data-pos="n-s---na-" data-shortdef="right, justice, law">iūs</span>
