Punctuatuon second thought.

--- a/index.html
+++ b/index.html
@@ -3471,7 +3471,7 @@
 	<span id="446#chorīs" data-intext="chorīs" data-perslemma="chorus" data-lemma="chorus –ī m." data-pos="n-p---mb-" data-shortdef="dance in circle; dance; company of singers or dancers">chorīs</span>
 	<span id="446#Cadmēia" data-intext="Cadmēia" data-perslemma="Cadmeius" data-lemma="Cadmēius (Cadmēus) –a –um" data-pos="a-s---fn-" data-shortdef="Cadmean">Cadmēia</span>
 	<span id="446#cingitur" data-intext="cingitur" data-perslemma="cingo" data-lemma="cingō cingere cīnxī cīnctus" data-pos="v3spip---" data-shortdef="to surround">cingitur</span>
-	<span id="446#Īnō" data-intext="Īnō" data-perslemma="Ino" data-lemma="Īnō Īnūs f. or Īnō Īnōnis f." data-pos="n-s---fn-" data-shortdef="Ino (a name)">Īnō</span>.
+	<span id="446#Īnō" data-intext="Īnō" data-perslemma="Ino" data-lemma="Īnō Īnūs f. or Īnō Īnōnis f." data-pos="n-s---fn-" data-shortdef="Ino (a name)">Īnō</span>;
 </p>
 <p data-ln="447">
 	<span id="447#iūs" data-intext="iūs" data-perslemma="jus" data-lemma="iūs iūris n." data-pos="n-s---na-" data-shortdef="right, justice, law">iūs</span>
