--- a/index.html
+++ b/index.html
@@ -3202,7 +3202,7 @@
 	<span id="405#Nȳsaeīs" data-intext="Nȳsaeīs" data-perslemma="Nysaeus" data-lemma="Nȳsaeus –a –um" data-pos="a-p---mb-" data-shortdef="of or belonging to Nysa, in India; Bacchic">Nȳsaeīs</span>
 	<span id="405#armātus" data-intext="armātus" data-perslemma="armo" data-lemma="armō armāre armāvī armātus" data-pos="v-prppmn-" data-shortdef="to equip, arm">armātus</span>
 	<span id="405#bracchia" data-intext="bracchia" data-perslemma="bracchium" data-lemma="bracchium bracchiī n." data-pos="n-p---na-" data-shortdef="arm">bracchia</span>
-	<span id="405#thyrsīs" data-intext="thyrsīs" data-perslemma="thyrsus" data-lemma="thyrsus –ī m." data-pos="n-p---mb-" data-shortdef="the stalk of a plant; a staff wreathed with ivy and vine-leaves">thyrsīs</span>.
+	<span id="405#thyrsīs" data-intext="thyrsīs" data-perslemma="thyrsus" data-lemma="thyrsus –ī m." data-pos="n-p---mb-" data-shortdef="the stalk of a plant; a staff wreathed with ivy and vine-leaves">thyrsīs</span>,
 </p>
 <p data-ln="404">
 	<span id="404#lūcidum" data-intext="lūcidum" data-perslemma="lucidus" data-lemma="lūcidus –a –um" data-pos="a-s---nv-" data-shortdef="bright, shining">lūcidum</span>
