--- a/index.html
+++ b/index.html
@@ -8232,7 +8232,7 @@
 <section>
 <header>OEDIPUS</header>
 <p data-ln="1042">
-	<span id="1042#Fātidice" data-intext="Fātidice" data-perslemma="fatidicus" data-lemma="fātidicus –a –um" data-pos="a-s---nv-" data-shortdef="prophetic">Fātidice</span>
+	<span id="1042#Fātidice" data-intext="Fātidice" data-perslemma="fatidicus" data-lemma="fātidicus –a –um" data-pos="a-s---nv-" data-shortdef="prophetic">Fātidice</span>,
 	<span id="1042#tē" data-intext="tē" data-perslemma="tu" data-lemma="tū tuī tibi tē tē" data-pos="p-s---ma-" data-shortdef="you">tē</span>,
 	<span id="1042#tē2" data-intext="tē" data-perslemma="tu" data-lemma="tū tuī tibi tē tē" data-pos="p-s---ma-" data-shortdef="you">tē</span>
 	<span id="1042#praesidem" data-intext="praesidem" data-perslemma="praeses" data-lemma="praeses praesidis m./f." data-pos="a-s---ma-" data-shortdef="protector">praesidem</span>
@@ -8240,11 +8240,11 @@
 	<span id="1042#deum" data-intext="deum" data-perslemma="deus" data-lemma="deus deī m." data-pos="n-s---ma-" data-shortdef="god">deum</span>
 </p>
 <p data-ln="1043">
-	<span id="1043#compello" data-intext="compello" data-perslemma="compello1" data-lemma="compellō compellāre compellāvī compellātus" data-pos="v1spia---" data-shortdef="to address">compello</span>:
+	<span id="1043#compello" data-intext="compello" data-perslemma="compello1" data-lemma="compellō compellāre compellāvī compellātus" data-pos="v1spia---" data-shortdef="to address">compello</span>.
 	<span id="1043#sōlum" data-intext="sōlum" data-perslemma="solus1" data-lemma="sōlus –a –um" data-pos="a-s---ma-" data-shortdef="alone, only">sōlum</span>
 	<span id="1043#dēbuī" data-intext="dēbuī" data-perslemma="debeo" data-lemma="dēbeō dēbēre dēbuī dēbitus" data-pos="v1sria---" data-shortdef="to owe; ought">dēbuī</span>
 	<span id="1043#fātīs" data-intext="fātīs" data-perslemma="fatum" data-lemma="fātum –ī n." data-pos="n-p---nd-" data-shortdef="destiny, fate">fātīs</span>
-	<span id="1043#patrem" data-intext="patrem" data-perslemma="pater" data-lemma="pater patris m." data-pos="n-s---ma-" data-shortdef="father; (in pl.) Patricians; Senators">patrem</span>;
+	<span id="1043#patrem" data-intext="patrem" data-perslemma="pater" data-lemma="pater patris m." data-pos="n-s---ma-" data-shortdef="father; (in pl.) Patricians; Senators">patrem</span>:
 </p>
 <p data-ln="1044">
 	<span id="1044#bis" data-intext="bis" data-perslemma="bis" data-lemma="bis" data-pos="d--------" data-shortdef="twice">bis</span>
@@ -8256,7 +8256,7 @@
 </p>
 <p data-ln="1045">
 	<span id="1045#mātrem" data-intext="mātrem" data-perslemma="mater" data-lemma="māter mātris f." data-pos="n-s---fa-" data-shortdef="mother">mātrem</span>
-	<span id="1045#perēmī" data-intext="perēmī" data-perslemma="perimo" data-lemma="perimō –ere –ēmī –ēmptus" data-pos="v1sria---" data-shortdef="to take away completely; annihilate">perēmī</span>:
+	<span id="1045#perēmī" data-intext="perēmī" data-perslemma="perimo" data-lemma="perimō –ere –ēmī –ēmptus" data-pos="v1sria---" data-shortdef="to take away completely; annihilate">perēmī</span> —
 	<span id="1045#scelere" data-intext="scelere" data-perslemma="scelus" data-lemma="scelus sceleris n." data-pos="n-s---nb-" data-shortdef="crime">scelere</span>
 	<span id="1045#cōnfecta" data-intext="cōnfecta" data-perslemma="conficio" data-lemma="cōnficiō cōnficere cōnfēcī cōnfectus" data-pos="v-srppfn-" data-shortdef="to complete; destroy">cōnfecta</span>
 	<span id="1045#est" data-intext="est" data-perslemma="sum" data-lemma="sum esse fuī futūrus" data-pos="v3spia---" data-shortdef="to be">est</span>
@@ -8275,7 +8275,7 @@
 	<span id="1047#gressū" data-intext="gressū" data-perslemma="gressus2" data-lemma="gressus –ūs m." data-pos="n-s---mb-" data-shortdef="stepping; step">gressū</span>
 	<span id="1047#sequere" data-intext="sequere" data-perslemma="sequor" data-lemma="sequor sequī secūtus" data-pos="v2spmp---" data-shortdef="to follow, come next">sequere</span>
 	<span id="1047#fallentēs" data-intext="fallentēs" data-perslemma="fallo" data-lemma="fallō fallere fefellī falsus" data-pos="v-pppafa-" data-shortdef="to deceive">fallentēs</span>
-	<span id="1047#viās" data-intext="viās" data-perslemma="via" data-lemma="via viae f." data-pos="n-p---fa-" data-shortdef="street">viās</span>;
+	<span id="1047#viās" data-intext="viās" data-perslemma="via" data-lemma="via viae f." data-pos="n-p---fa-" data-shortdef="street">viās</span>,
 </p>
 <p data-ln="1048">
 	<span id="1048#suspēnsa" data-intext="suspēnsa" data-perslemma="suspendo" data-lemma="suspendō suspendere suspendī suspēnsum" data-pos="v-prppna-" data-shortdef="to hang">suspēnsa</span>
@@ -8291,7 +8291,7 @@
 	<span id="1049#rege" data-intext="rege" data-perslemma="rego" data-lemma="regō regere rēxī rēctus" data-pos="v2spma---" data-shortdef="to rule">rege</span>.
 </p>
 <p data-ln="1050">
-	— <span id="1050#ingredere" data-intext="ingredere" data-perslemma="ingredior" data-lemma="ingredior ingredī ingressus" data-pos="v2spmp---" data-shortdef="to step in, enter">ingredere</span>
+	<span id="1050#ingredere" data-intext="ingredere" data-perslemma="ingredior" data-lemma="ingredior ingredī ingressus" data-pos="v2spmp---" data-shortdef="to step in, enter">ingredere</span>
 	<span id="1050#praeceps" data-intext="praeceps" data-perslemma="praeceps" data-lemma="praeceps" data-pos="a-s---mn-" data-shortdef="headlong">praeceps</span>,
 	<span id="1050#lūbricōs" data-intext="lūbricōs" data-perslemma="lubricus" data-lemma="lūbricus –a –um" data-pos="a-p---ma-" data-shortdef="smooth, slippery">lūbricōs</span>
 	<span id="1050#pōnēns" data-intext="pōnēns" data-perslemma="pono" data-lemma="pōnō pōnere posuī positus" data-pos="v-sppamn-" data-shortdef="to place">pōnēns</span>
@@ -8350,14 +8350,14 @@
 	<span id="1057#īte" data-intext="īte" data-perslemma="eo1" data-lemma="eō īre īvī itum" data-pos="v2spma---" data-shortdef="to go">īte</span>,
 	<span id="1057#ferte" data-intext="ferte" data-perslemma="fero" data-lemma="ferō ferre tulī lātus" data-pos="v2ppma---" data-shortdef="to bear, carry, report">ferte</span>
 	<span id="1057#dēpositīs" data-intext="dēpositīs" data-perslemma="depono" data-lemma="dēpōnō dēpōnere dēposuī dēpositus" data-pos="v-prppmd-" data-shortdef="to put down">dēpositīs</span>
-	<span id="1057#opem" data-intext="opem" data-perslemma="ops1" data-lemma="ops opis f." data-pos="n-s---fa-" data-shortdef="resources">opem</span>:
+	<span id="1057#opem" data-intext="opem" data-perslemma="ops1" data-lemma="ops opis f." data-pos="n-s---fa-" data-shortdef="resources">opem</span>.
 </p>
 <p data-ln="1058">
 	<span id="1058#mortifera" data-intext="mortifera" data-perslemma="mortifer" data-lemma="mortifer –era –erum" data-pos="a-p---na-" data-shortdef="deadly">mortifera</span>
 	<span id="1058#mēcum" data-intext="mēcum" data-perslemma="ego" data-lemma="egō meī mihi mē mē" data-pos="p-s---mb-" data-shortdef="I, me">mēcum</span>
 	<span id="1058#vitia" data-intext="vitia" data-perslemma="vitium" data-lemma="vitium vitiī n." data-pos="n-p---na-" data-shortdef="fault, crime">vitia</span>
 	<span id="1058#terrārum" data-intext="terrārum" data-perslemma="terra" data-lemma="terra terrae f." data-pos="n-p---fg-" data-shortdef="land">terrārum</span>
-	<span id="1058#extrahō" data-intext="extrahō" data-perslemma="extraho" data-lemma="extrahō extrahere extrāxī extractum" data-pos="v1spia---" data-shortdef="to draw out">extrahō</span>.
+	<span id="1058#extrahō" data-intext="extrahō" data-perslemma="extraho" data-lemma="extrahō extrahere extrāxī extractum" data-pos="v1spia---" data-shortdef="to draw out">extrahō</span>:
 </p>
 <p data-ln="1059">
 	<span id="1059#violenta" data-intext="violenta" data-perslemma="violentus" data-lemma="violentus –a –um" data-pos="a-p---na-" data-shortdef="violent, savage">violenta</span>
