--- a/index.html
+++ b/index.html
@@ -8374,7 +8374,7 @@
 	<span id="1060#Pestis" data-intext="Pestis" data-perslemma="pestis" data-lemma="pestis pestis f." data-pos="n-s---fn-" data-shortdef="plague">Pestis</span>
 	<span id="1060#et2" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="1060#rabidus" data-intext="rabidus" data-perslemma="rabidus" data-lemma="rabidus –a –um" data-pos="a-s---mn-" data-shortdef="raving, savage, mad, raging">rabidus</span>
-	<span id="1060#Dolor" data-intext="Dolor" data-perslemma="dolor" data-lemma="dolor dolōris m." data-pos="n-s---mn-" data-shortdef="pain, grief">Dolor</span>,
+	<span id="1060#Dolor" data-intext="Dolor" data-perslemma="dolor" data-lemma="dolor dolōris m." data-pos="n-s---mn-" data-shortdef="pain, grief">Dolor</span>.
 </p>
 <p data-ln="1061">
 	<span id="1061#mēcum" data-intext="mēcum" data-perslemma="ego" data-lemma="egō meī mihi mē mē" data-pos="p-s---mb-" data-shortdef="I, me">mēcum</span>
